--- a/content/code/empty_pews.Rmd
+++ b/content/code/empty_pews.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Data Exploration: Empty Pews in U.S. Congregations'
 author: "John A. Bernau"
-date: '2018-04-19'
+date: '2018-10-19'
 slug: empty_pews
 tags: []
 categories: []
@@ -11,20 +11,17 @@ categories: []
 knitr::opts_chunk$set(echo = TRUE)
 ```
 <a name="top"></a>
-This post offers an example of data exploration in R. I'll cover the following topics:
-
-<img src="/code/macon_catholic.jpg" height="500" align = "right" style="padding:10px;"/>
+This post offers an example of data exploration in R. I'll cover the following topics:<img src="/code/macon_catholic.jpg" height="400" align = "right" style="padding:10px;"/>
 
 - [Importing data](#import)
 - [Preparing data](#prep)
 - [Plotting data v.1](#plot1)
 - [Standardizing Variables](#stan)
 - [Plotting data v.2](#plot2)
-- [APPENDIX: Creating smooth animations](#app)
+- [Conclusion](#fin)
 
-More specifically, I'll be using the [US Congregational Life Survey](http://www.thearda.com/Archive/Files/Descriptions/CLS08PR.asp) from the [ARDA data archives](http://www.thearda.com/Archive/browse.asp), to examine how American church attendance has fluctuated between 2001 - 2008. This issue is important to any longitudinal understanding of religiosity, and American religiosity in particular has been the subject of much debate [(Berger et al. 2008, Warner 2010)](#ref). 
+More specifically, I'll be using data from the [US Congregational Life Survey](http://www.thearda.com/Archive/Files/Descriptions/CLS08PR.asp), to examine how American church attendance has fluctuated between 2001 - 2008. These trends are an important part of any contemporary understanding of religiosity, and especially important when considering America's role as a "religious outlier" in the global landscape [(Berger et al. 2008)](#ref). By focusing on longitudinal trends rather than absolute levels, Voas and Chaves [(2016)](#ref) argue America's decades of religious decline fit squarely within global patterns of secularization. However, measuring religiosity (and its "decline") is a task with little consensus [(Voas et al. 2002, Warner 2010)](#ref), and church attendance is no exception [(Marcum 1999, Chaves 2017)](#ref). The US Congregational Life Survey asks head clergy in 2008 to estimate weekly attendance for the previous seven years. While not the perfect, this measure gets around problems of social desirability found in individual surveys. 
 
-Measuring church attendance is a notorious methodological challenge [(Marcum 1999, Chaves 2017)](#ref), and this survey asks head clergy in 2008 to estimate weekly attendance for the previous seven years. While not the perfect, this measure gets around problems of social desirability found in individual surveys. 
 
 **RQ: How has American church attendance fluctated between 2001 - 2008, and how does this differ across denominations?**
 
@@ -39,11 +36,19 @@ require(tidyverse)
 require(RColorBrewer)
 ```
 
-Then we'll grab the data from the  I use the pre-labeled Stata (.DTA) file to save time on recoding.
+<a name="import"></a>
+
+##Importing Data  
+
+From [the ARDA site](http://www.thearda.com/Archive/Files/Descriptions/CLS08PR.asp), I use the pre-labeled Stata (.DTA) file to save time on recoding.
 
 ```{r}
 data <- read.dta("http://www.thearda.com/download/download.aspx?file=U.S.%20Congregational%20Life%20Survey,%20Wave%202,%20Random%20Sample%20Congregational%20Profile%20Survey.DTA")
 ```
+
+<a name="prep"></a>
+
+##Preparing Data  
 
 I start by examining a tabulation of denominations, saved as "denom". After constraining the denomination variable ("DENOM1") to character, I save a list of the ten largest denominations as `top10`. Lastly, I filter the dataset to only include top 10 denominations and save this as `data2`.
 
@@ -54,75 +59,79 @@ top10 <- denom$DENOM1[1:10]
 data2 <- filter(data, DENOM1 %in% top10)
 ```
 
-Now let's look at attendance trends. These measures rely 2008 estimates by head-clergy. Each year's attendance is stored as a separate variable but we'll use the `gather` function to transform the eight columns into two columns. `name` will now contain "ATTEND01", "ATTEND02", etc. and `value` will contain the number estimates for each year. This step is often confusing! Take a look at `data2` vs `data3` to see the changes. The last line puts our five variables of interest up front and arranges by `congrega` which are individual congregation codes.  
+Now let's look at attendance trends. Each year's attendance (2001 - 2008) is stored as a separate variable but we'll use the `gather` function to transform the eight columns into two columns. `name` will now contain "ATTEND01", "ATTEND02", etc. and `value` will contain the number estimates for each year.
 
 ```{r}
 data3 <- gather(data2, "name", "value", ATTEND08:ATTEND01)
-data3 <- arrange(select(data3, 1:3, name, value, everything()), congrega)
 ```
 
-
-To recode our yearly attendance variable, I create a new variable `date` and replace "ATTEND" with "20". This will turn "ATTEND08" into "2008". These regular expressions are invaluable data wrangling tools. Check out this great resource for more info on [regular expressions in R.](https://www.rstudio.com/wp-content/uploads/2016/09/RegExCheatsheet.pdf) The `select` command orders the varibles, putting our new date variable in the fifth column and deleting the `name` variable, while keeping everything else the same. Lastly, I convert date to numeric format. (Alternatively, we could make it a formal date class in R using `as.Date()`).
+To recode our yearly attendance variable, I create a new variable `date` and replace "ATTEND" with "20". This will turn "ATTEND08" into "2008", for example. These regular expressions are invaluable data wrangling tools. Check out this great resource for more info on [regular expressions in R.](https://www.rstudio.com/wp-content/uploads/2016/09/RegExCheatsheet.pdf) After deleting the `name` variable, I convert some data classes and print out a tabulation of our denominations. 
 
 ```{r}
 data3$name <- as.character(data3$name)
 data3$date <- gsub("ATTEND", 20, data3$name)
-data3 <- select(data3, 1:4, date, everything()) %>% select(-name)
-data3$date <- as.numeric(data3$date)
-```
-
-
-Let's look at a tabulation of our denominations
-```{r}
-data3$DENOM1 <- as.character(data3$DENOM1)
+data3 <- data3 %>% 
+  select(-name) %>% 
+  mutate(date = as.numeric(date),
+         DENOM1 = as.character(DENOM1))
 count(data3, DENOM1)
 ```
 
 
-Some recoding to help abbreviate denomination names.
+Some recoding to help abbreviate denomination names. I use the `startsWith` function to avoid typing the full names. 
 
 ```{r}
-data3$DENOM1[data3$DENOM1 == "Evangelical Lutheran Church in America"] <- "ELCA"
-data3$DENOM1[data3$DENOM1 == "Lutheran Church, Missouri Synod"] <- "Missouri Synod"
+data3$DENOM1[startsWith(data3$DENOM1, "Evangelical")] <- "ELCA"
+data3$DENOM1[startsWith(data3$DENOM1, "Lutheran")] <- "Missouri Synod"
 data3$DENOM1[startsWith(data3$DENOM1, "Unitarian")] <- "Unit. Universalist"
-data3$DENOM1[startsWith(data3$DENOM1, "United Methodist")] <- "United Methodist"
-data3$DENOM1[startsWith(data3$DENOM1, "United Church of Christ")] <- "UC Christ"
+data3$DENOM1[startsWith(data3$DENOM1, "United Meth")] <- "United Methodist"
+data3$DENOM1[startsWith(data3$DENOM1, "United Church of Ch")] <- "UC Christ"
 data3$DENOM1[startsWith(data3$DENOM1, "Pres")] <- "Presbyterian"
 data3$DENOM1[startsWith(data3$DENOM1, "Epis")] <- "Episcopal"
 data3$DENOM1[startsWith(data3$DENOM1, "Am")] <- "Am. Baptist"
 data3$DENOM1[startsWith(data3$DENOM1, "Roman")] <- "Roman Catholic"
 ```
 
+<a name="plot1"></a>
 
-An initial plot of `date` X `value` with separately colored lines for each level of `DENOM1`. Plot estimates with geom_point() and connect with geom_line(). **Importantly,** to tell R which points to connect with the line, make sure to specify that you want to group by individual congregations (`group = data3$congrega`). Otherwise, R will draw a line connecting each individual ELCA congregation before moving to the next year and doing the same. For a subtle effect, I've made large congregation estimates more opaque than smaller ones using the `alpha = value` command. 
+##Plotting Data v.1  
+
+With our cleaned variables, we can now plot `date` X `value` with separately colored lines for each level of `DENOM1`. Importantly, to tell R which points to connect with the line, make sure to specify that you want to group by individual congregations (`group = congrega`). Otherwise, R will draw a line connecting each individual ELCA congregation (for example) before moving to the next year and doing the same. For a subtle effect, I've made large congregation estimates more opaque than smaller ones using the `alpha = value` command. 
 
 ```{r, message=FALSE, warning=FALSE}
 ggplot(data3, aes(x = date, y = value, color = DENOM1)) +
   geom_point(aes(alpha = value)) +
-  geom_line(aes(group = data3$congrega, alpha = value)) +
+  geom_line(aes(group = congrega, alpha = value)) +
   scale_alpha_continuous(guide = F) +
   labs(x = "year", y = "Avg Wkly Attend")
 ```
 
-Takeaways...TOO MANY CATHOLICS! This graph is not helpful. Instead, I plot each denomination in its own pane using `facet_wrap()`. I also remove the color legend using `scale_color...(guide=FALSE)`, and add some annotations / theme elements. With many categories, these graphs are hard to size correctly. I've given a size that works for me and attached the plot here as a raw image file.  
+This graph is not helpful. The Catholic congregations are obscuring other denomination trends. Instead, I plot each denomination in its own pane using `facet_wrap()`. I also remove the color legend using `scale_color...(guide=FALSE)`, and add some annotations / theme elements. With many categories, these graphs are hard to size correctly. I've given a size that works for me and attached the plot here as a raw image file.   
+
 ```{r, eval=FALSE, warning=FALSE}
 ggplot(data3, aes(x = date, y = value, color = DENOM1)) +
   geom_point() +
-  geom_line(aes(group = data3$congrega)) +
+  geom_line(aes(group = congrega)) +
   geom_smooth(color = "black", se = F) +
   scale_color_discrete(guide = F) +
   facet_wrap(~DENOM1, scales = "free", ncol = 5) +
-  labs(x = "Year", y = "Avg Wkly Attend", title = "Average Weekly Attendance (as estimated by head clergy in 2008)*", caption = "*Source: US Congregational Life Survey Wave 2\nN=5,000 US congregations") +
+  labs(x = "Year", y = "Avg Wkly Attend", title = "US Church Attendance", 
+       caption = "________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations: 195/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
   theme(text=element_text(family = "Times New Roman", size = 15))
 
-# ggsave("~/Desktop/file.jpg", width = 15, height = 8.5, unit = "in")
+# ggsave("~/Desktop/uscong.jpg", width = 15, height = 8.5, unit = "in")
 ```
 
+*(Click to enlarge)*  
 [<img src="/code/uscong.jpg"/>](/code/uscong.jpg)
 
 While a hasty observation would conclude that American Baptists have the steepest negative slope, a closer examination would note this trend is only based on four congregations as opposed to the hundreds of ELCA or Catholic congregations. Also notice that the Y-axis is different for each plot. The largest Roman Catholic congregation maxes out at 10,000 members(!) while the largest Unitarian Universalist maxes out at 160. A graphically subtle, but substantively important detail! 
 
-To fix this, let's standardize each congregation at it's starting level of attendance. We're not interested in absolute totals per say, but rather the change in those totals over time. Before starting this analysis, I use `select` to get rid of extra variables. 
+<a name="stan"></a>
+
+##Standardizing Variables 
+
+To fix this, let's standardize each congregation at its starting level of attendance in 2001. We're not interested in absolute totals per say, but rather the *change* in those totals over time. Before starting this analysis, I use `select` to get rid of extra variables and rename our attendance measure.  
 
 ```{r}
 new <- data3 %>% 
@@ -131,7 +140,7 @@ new <- data3 %>%
 ```
 
 
-Create a subset of starting values. First, take out rows with no attendance information, then group by congregation and identify the smallest date value for each congregation and save as `base`. This will be the baseline attendance for each congregation. The `fitler` command selects rows where date == base. In other words, the chronoloical first rows of each congregation. The `select` command prunes our variables to only three of interest: congregation, the first date in the survey, and the attendance for this time point. The `rename` command gives interpretable names. 
+After taking out rows with no attendance information, I group by congregation and identify the smallest date value for each congregation and save as `base`. This will serve as the baseline attendance for each congregation. The `filter` command selects rows where date == base. In other words, the chronoloical first rows of each congregation. The `select` command prunes our variables to only three of interest: congregation, the first date in the survey, and the attendance for this time point. The `rename` command gives these measures interpretable names. 
 
 ```{r}
 new2 <- new %>% 
@@ -154,18 +163,28 @@ new3 <- inner_join(new, new2) %>%
   mutate(delta = total_attend - base)
 ```
 
-Now we can start examining the data. The following code plots each congregation's *change in attendance* from it's starting baseline. 90% of congregations report 2001 as their baseline, but 19 congregations started later for whatever reason: (`count(new3, congrega, founded) %>% filter(founded != 2001)`). I also report the net-change in total attendance between 2001 - 2008 by selecting the final year of the survey and adding up the attendance changes `delta`.
+As a side note, 90% of congregations in this survey report 2001 as their baseline, but 19 congregations started later: (`count(new3, congrega, founded) %>% filter(founded != 2001)`). By filtering the last survey-year and totaling the attendance changes, I also report the net-change in total attendance:  
+  
+**Across all 195 congregations considered here, attendance has fallen by 2,033 members between 2001 - 2008.** 
 
 ```{r}
 filter(new3, date == 2008) %>% summarize(sum(delta))
 ```
 
+<a name="plot2"></a>
+
+##Plotting Data v.2
+
+
+This plot presents this information in a powerful way. Each line represents a congregation's *change in attendance* from its starting baseline.
 
 ```{r}
 ggplot(new3, aes(date, delta)) +
-  geom_line(aes(group = congrega), 
-            size = 1, alpha = 0.4) +
-  labs(title = "US Church Attendance:", subtitle = "Congregation deviations from baseline",
+  geom_line(aes(group = congrega), size = 1, alpha = 0.4) +
+  annotate("text", x = 2003, y = 1500, size = 4, 
+           label = "Net change -2,033") +
+  labs(title = "US Church Attendance:", 
+       subtitle = "Congregation deviations from baseline",
        x = NULL, y = NULL,
        caption = "________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations: 195/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
   theme(text=element_text(size = 14, family="Times New Roman"),
@@ -174,19 +193,19 @@ ggplot(new3, aes(date, delta)) +
         panel.grid.minor = element_line(color="grey90"),
         panel.grid.major = element_line(color="grey90"),
         plot.margin = unit(c(0.5,0.5,0.5,0.5), "cm"),
-        plot.caption = element_text(size = 9)) +
-  annotate("text", x = 2003, y = 1500, size = 4, label = "Net change -2,033")
+        plot.caption = element_text(size = 9))
+  
 ```
 
-An ominous looking representation! We see many congregations reporting sustained decline, while a few report enormous growth: +2,000 attendees!
-
-We can make this more informative by coloring according to denomination:
+While many congregations report sustained decline, a few report enormous growth: +2,000 attendees! We can make this more informative by coloring according to denomination.
 
 ```{r}
 ggplot(new3, aes(date, delta, color = DENOM1)) +
-  geom_line(aes(group = congrega), 
-            size = 1, alpha = 0.4) +
-  labs(title = "US Church Attendance:", subtitle = "Congregation deviations from baseline",
+  geom_line(aes(group = congrega), size = 1, alpha = 0.4) +
+  annotate("text", x = 2003, y = 1500, size = 4, 
+           label = "Net change -2,033") +
+  labs(title = "US Church Attendance:", 
+       subtitle = "Congregation deviations from baseline",
        x = NULL, y = NULL,
        caption = "________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations: 195/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
   theme(text=element_text(size = 14, family="Times New Roman"),
@@ -196,26 +215,30 @@ ggplot(new3, aes(date, delta, color = DENOM1)) +
         panel.grid.major = element_line(color="grey90"),
         plot.margin = unit(c(0.5,0.5,0.5,0.5), "cm"),
         plot.caption = element_text(size = 9)) +
-    annotate("text", x = 2003, y = 1500, size = 4, label = "Net change -2,033") +
     guides(colour = guide_legend(override.aes = list(alpha = 1, size=2))) +
     scale_color_discrete(name = "Denomination")
 ```
 
-Ah yes...again with the Roman Catholics. They simply have a lot of variability. Four churches reported more than 500 new attendees and about six churches reporting declines of at least 500. What about the rest? Using `filter`, we can calculate the non-Catholic net change in attendance and plot the individual congregation trajectories.
+The Roman Catholics simply have a lot of variability. Four churches report more than 500 new attendees and about six churches report declines of at least 500. What about the rest? Using `filter`, we can calculate the non-Catholic net change in attendance:  
+  
+**These 151 non-Catholic congregations lost 2,656 attendees between 2001 - 2008.**  
 
 ```{r}
-# Find new net change
-filter(new3, DENOM1 != "Roman Catholic Church") %>% 
+filter(new3, DENOM1 != "Roman Catholic") %>% 
   filter(date == 2008) %>% 
   summarize(sum(delta))
 ```
 
+Using this new subset, we can plot non-Catholic congregation trends. 
 ```{r}
-# Plotting without Catholics
-ggplot(filter(new3, DENOM1 != "Roman Catholic"), aes(date, delta, color = DENOM1)) +
-  geom_line(aes(group = congrega), 
-            size = 1, alpha = 0.4) +
-  labs(title = "US Church Attendance:", subtitle = "Congregation deviations from 2001 baseline: NO CATHOLICS",
+ggplot(filter(new3, DENOM1 != "Roman Catholic"), # removing Catholics
+       aes(date, delta, color = DENOM1)) +
+  geom_line(aes(group = congrega), size = 1, alpha = 0.4) +
+  scale_color_brewer(palette = "Set1", name = "Denomination") +
+  annotate("text", x = 2002.5, y = -350, size = 4, 
+           label = "Net change -2,656") +
+  labs(title = "US Church Attendance:", 
+       subtitle = "Congregation deviations from 2001 baseline: NO CATHOLICS",
        x = NULL, y = NULL,
        caption = "________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations - catholics: 151/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
   theme(text=element_text(size = 14, family="Times New Roman"),
@@ -225,26 +248,32 @@ ggplot(filter(new3, DENOM1 != "Roman Catholic"), aes(date, delta, color = DENOM1
         panel.grid.major = element_line(color="grey90"),
         plot.margin = unit(c(0.5,0.5,0.5,0.5), "cm"),
         plot.caption = element_text(size = 9)) +
-  annotate("text", x = 2002.5, y = -350, size = 4, label = "Net change -2,656") +
-  guides(colour = guide_legend(override.aes = list(alpha = 1, size=2))) +
-  scale_color_brewer(palette = "Set1", name = "Denomination")
+  guides(colour = guide_legend(override.aes = list(alpha = 1, size=2)))
 
 ```
 
-Now we might not be interested in individual congregations. We can aggregate the yearly changes according to denomination. The following code groups by date and denomination and then sums up the yearly change in attendance.
+While this plot does a good job of showing attendance trends for each congregation, it is hard to make any meaningful conclusions. However, we can use this data to create aggregate denomination trends. By first grouping according to denomination and then adding up the yearly changes, we get a much more informative summary (saved as `ag`) and plot.
+
 
 ```{r}
 ag <- new3 %>% 
   group_by(date, DENOM1) %>% 
-  summarise(delta = sum(delta))
+  summarise(delta = sum(delta)) %>% 
+  arrange(DENOM1)
+head(ag)
 ```
 
-This allows us to plot the denomination changes rather than individual congregation changes.
+
 ```{r}
+# Plotting aggregates
 ggplot(ag, aes(date, delta)) +
   geom_line(aes(group = DENOM1, color = DENOM1), 
             size = 1, alpha = 0.7) +
-  labs(title = "US Church Attendance:", subtitle = "Denomination deviations from 2001 baseline",
+  annotate("text", x = 2007, y = -3000, size = 4, 
+           label = "Net change -2,033") +
+  scale_color_discrete(name = "Denomination") +
+  labs(title = "US Church Attendance:", 
+       subtitle = "Denomination deviations from 2001 baseline",
        x = NULL, y = NULL,
        caption = "________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations: 195/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
   theme(text=element_text(size = 14, family="Times New Roman"),
@@ -253,23 +282,21 @@ ggplot(ag, aes(date, delta)) +
         panel.grid.minor = element_line(color="grey90"),
         panel.grid.major = element_line(color="grey90"),
         plot.margin = unit(c(0.5,0.5,0.5,0.5), "cm"),
-        plot.caption = element_text(size = 9)) +
-  annotate("text", x = 2007, y = -3000, size = 4, label = "Net change -2,033") +
-  scale_color_discrete(name = "Denomination")
+        plot.caption = element_text(size = 9))
 ```
 
-This puts the catholic deviations in stark contrast. As a researcher, we'd want to look into this. Did the Roman Catholic Churches really gain **4,500 new attendees in only three years?** What could have spurred this increase? Or, more likely, what kind of reporting anomaly can account for this? Keep in mind that these attendance measures come from clergy self-reports in 2008. These post-hoc estimates probably aren't as robust as we'd like...
-
-
-To make this change a bit clearer, we can plot each denomination with it's own axes. 
-```{r}
+Once again, the Catholic variability overpowers all other denominations. At this point, we might want to examine the data more closely. Did the Roman Catholic Churches really gain **4,500 new attendees in only three years?** What could have spurred this increase? Or, more likely, what kind of reporting anomaly can account for this? Keep in mind that these attendance measures come from clergy self-reports in 2008. These post-hoc estimates might not be as robust as we would like. In any case, we can control for this variability by isolating each denomination within its own pane.   
+```{r, eval = FALSE}
 ggplot(ag, aes(date, delta)) +
-  geom_line(aes(group = DENOM1, color = DENOM1), 
-            size = 1, alpha = 0.7) +
-  labs(title = "US Church Attendance:", subtitle = "Denomination deviations from 2001 baseline",
+  geom_line(aes(group = DENOM1, color = DENOM1), size = 1, alpha = 0.7) +
+  scale_color_discrete(guide = F) +
+  scale_x_continuous(breaks = 2001:2008, 
+                     labels = c("", "2001", "", "",
+                                "", "", "2008", "")) +
+  labs(title = "US Church Attendance:", 
+       subtitle = "Denomination deviations from 2001 baseline",
        x = NULL, y = NULL,
        caption = "\nNet Change = -2,033 Attendees\n________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations: 195/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
-  scale_x_continuous(breaks = 2001:2008, labels = c("", "2001", "", "", "", "", "2008", "")) +
   theme(text=element_text(size = 14, family="Times New Roman"),
         axis.text = element_text(size = 14),
         panel.background = element_rect(fill="white"),
@@ -277,14 +304,20 @@ ggplot(ag, aes(date, delta)) +
         panel.grid.major = element_line(color="grey90"),
         plot.margin = unit(c(0.5,0.5,0.5,0.5), "cm"),
         plot.caption = element_text(size = 9)) +
-  scale_color_discrete(guide = F) +
   facet_wrap(~DENOM1, scales = "free_y", ncol = 5)
 
 # # Save as an image with appropriate dimensions:
 # ggsave("~/Desktop/dd.jpg", width = 10, height = 6, units = "in")
 ```
 
-WRITE CONCLUSION
+*(Click to enlarge)*  
+[<img src="/code/dd.jpg"/>](/code/dd.jpg)
+
+<a name="fin"></a>
+
+##Conclusion  
+
+WRITE CONCLUSIONWRITE CONCLUSION WRITE CONCLUSION WRITE CONCLUSION WRITE CONCLUSION WRITE CONCLUSION WRITE CONCLUSION WRITE CONCLUSION
 
 ---
 
@@ -296,93 +329,11 @@ WRITE CONCLUSION
 
 * Marcum, John P. 1999. “Measuring Church Attendance: A Further Look.” *Review of Religious Research* 41(1):122–30.
 
+* Voas, David, Alasdair Crockett, and Daniel V. A. Olson. 2002. “Religious Pluralism and Participation: Why Previous Research Is Wrong.” *American Sociological Review* 67(2):212–30.
+
+* Voas, David and Mark Chaves. 2016. “Is the United States a Counterexample to the Secularization Thesis?” *American Journal of Sociology* 121(5):1517–56.
+
 * Warner, Rob. 2010. *Secularization and Its Discontents.* London, GB: Continuum.
-
-___
-
-**APPENDIX: Creating Smooth Animations with gganimate and tweenr**  
-
-```{r}
-require(gganimate)
-require(tweenr)
-```
-
-```{r}
-# Create group id variable from congregation id's
-new3$id <- as.factor(new3$congrega)
-new3$id <- as.numeric(new3$id)
-```
-
-
-Select only some variables, rename to fit tweenr conventions
-```{r}
-new4 <- new3 %>% 
-  select(date, delta, congrega, id) %>% 
-  mutate(time = date) %>% 
-  rename(x = date, y = delta) 
-```
-
-
-Remove variables and add "ease" function
-```{r}
-new4 <- select(new4, -congrega)
-new4$ease <- "linear"
-```
-
-
-This is the transformation command. Give it five variables. X, Y, time, id, ease. 
-```{r}
-new_tween <- tween_elements(new4, "time", "id", "ease", nframes = 250)
-```
-
-
-Create new variables for joining...
-```{r}
-new_tween <- new_tween %>% 
-  mutate(date = round(time), id = .group)
-```
-
-
-Be careful of factors. First read literally as character, and then turn this into number. 
-```{r}
-new_tween$id <-  as.character(new_tween$id)
-new_tween$id <-  as.numeric(new_tween$id)
-new5 <- left_join(new_tween, new3) # inner-join produces a weird jumpy gif
-```
-
-
-Create ggplot object.  
-```{r}
-a <- ggplot(new_tween, aes(x, y, frame = .frame)) +
-  geom_line(aes(cumulative = T, group = .group), 
-            size = 1, alpha = 0.4) +
-  labs(title = "US Church Attendance:", subtitle = "Congregation deviations from 2001 baseline",
-       x = NULL, y = NULL,
-       caption = "________________________________________________\nSource: US Congregational Life Survey\nTop-10 largest denominations: 204/251 congregations\nJohn A. Bernau 2018 // www.johnabernau.com") +
-  theme(text=element_text(size = 14, family="Times New Roman"),
-        axis.text = element_text(size = 14),
-        panel.background = element_rect(fill="white"),
-        panel.grid.minor = element_line(color="grey90"),
-        panel.grid.major = element_line(color="grey90"),
-        plot.margin = unit(c(0.5,0.5,0.5,0.5), "cm"),
-        plot.caption = element_text(size = 9)) +
-  annotate("text", x = 2003, y = 1500, size = 4, label = "Net change -2,033")
-
-# Before sending to gganimate, double-check the static visualization looks appropriate
-a
-```
-
-Animate using gganimate. This take a while (a few minutes). ggplot constructs individual plots for each frame we specified using tweenr (250). Then stitches them together into an animated gif using gganimate. 
-
-# Save as animation (takes ~2 min)
-gganimate(a, "~/Desktop/secular_spider1.gif", interval = 0.05, title_frame = F)
-
-
-
-
-Nonetheless, we can quickly get an rough idea of the attendance trends for each of these denominations over the last eight years. 
-
-
 
 
 ___
