--- a/public/research/2018-04-17-sympathetic-leviathan.Rmd
+++ b/public/research/2018-04-17-sympathetic-leviathan.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "The Sympathetic Leviathan: How Do Modern States Culturally Respond to Disasters"
 author: John A. Bernau
-date: 2018-04-01T21:13:14-05:00
+date: "2018-04-01"
 slug: sympathetic-leviathan
 categories: []
 tags: []
